chore: update plugins